TransferForm submission button behaviour fixes (GcdsButton 'disabled' is styling only, doesn't disable onClick...). Move section headings in to section components and align the table refresh button with the table heading

--- a/demo-transfer-dashboard/src/Components/TransferTable.css
+++ b/demo-transfer-dashboard/src/Components/TransferTable.css
@@ -1,3 +1,24 @@
+@media (min-width: 600px) {
+  .transfer-table-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+
+    > gcds-heading {
+      flex-shrink: 1;
+    }
+    > gcds-button {
+      flex-grow: 1;
+
+      margin-top: var(--gcds-heading-spacing-600);
+      margin-bottom: var(--gcds-heading-spacing-300);
+
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
 .transfer-table {
   width: 100%;
   border-collapse: collapse;
